modifies for CN(serif) & animated scroll & new bar

--- a/_config.yml
+++ b/_config.yml
@@ -175,6 +175,8 @@ auto_thumbnail_image: true
 cover_image: cover.jpg
 # Your favicon located in folder `source/_images/` (development) or in `source/assets/images/` (production)
 favicon:
+# Icon in home screen of iOS devices, located in same directory with favicon
+apple_touch_icon:
 # Display an image gallery at the end of a post which have photos variables (false: disabled, true: enabled)
 image_gallery: true
 # Pagination behavior of archive, category and tag pages (false: pagination disabled, true: pagination enabled)
@@ -219,10 +221,6 @@ gitalk:
     owner:
     # The repo to store comments:
     repo:
-    # The attribute of posts to use to link them to GitHub issues.
-    # See all attributes: https://hexo.io/docs/variables#Page-Variables
-    # `path` is recommended because the identifier needs to be unique and shorter than 50 characters.
-    post_identifier: path
     # See all options: https://github.com/gitalk/gitalk#options
     options:
         language: "en"
@@ -230,6 +228,7 @@ gitalk:
         distractionFreeMode: false
         enableHotKey: true
         pagerDirection: "first"
+        createIssueManually: true
 
 # -------------------
 # Integrated services
